<?xml version="1.0"?>
<package format="2">
  <name>my_test_launch</name>
  <version>0.0.1</version>
  <description>Launches my_test_node</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>my_test_node</exec_depend>
  <exec_depend>roslaunch</exec_depend>

</package>
